# musical_python

./: .codacy.yml  .gitignore  .pyup.yml  .travis.yml  README.md  generate_abc.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
abcmidi/: README.md  VERSION  abcmatch.c  genmidi.c  matchsup.c  midi2abc.c  parseabc.c  parseabc.h  queues.c  store.c  toabc.c  yapstree.c
abcmidi/doc/: CHANGES  midi2abc.1  readme.txt
data/: remove_duplicates.py
musical_python/: settings.py  urls.py  views.py  wsgi.py
scrap_midi/: scrap_freemidi_org.py
scripts/: poetry_to_pip_requirements.py
static/abc/: generated.abc
static/css/: style.css
static/csv/: abcmidi_instrument_name.csv
static/midi/: music.midi
templates/: base.html
templates/main/: index.html  instruments.html  references.html
