[project]
name = "musical-python"
version = "0.1.0"
description = "Music generation with LSTMs in Tensorflow"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "selenium (>=4.35.0,<5.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"

